Re-work configuration to allow for a small minimum config, and flexability in further configuration